@@ -5,7 +5,7 @@ from pyqtgraph.pgcollections import OrderedDict
 app = pg.mkQApp()
 
 
-listOfTuples = [('text_%d' % i, i, i/10.) for i in range(12)]
+listOfTuples = [('text_%d' % i, i, i/9.) for i in range(12)]
 listOfLists = [list(row) for row in listOfTuples]
 plainArray = np.array(listOfLists, dtype=object)
 recordArray = np.array(listOfTuples, dtype=[('string', object), 
@@ -77,6 +77,47 @@ def test_TableWidget():
     w.setSortMode(1, 'index')
     w.sortByColumn(1, pg.QtCore.Qt.AscendingOrder)
     assertTableData(w, listOfTuples)
+
+    # Test formatting
+    item = w.item(0, 2)
+    assert item.text() == ('%0.3g' % item.value)
+    
+    w.setFormat('%0.6f')
+    assert item.text() == ('%0.6f' % item.value)
+    
+    w.setFormat('X%0.7f', column=2)
+    assert isinstance(item.value, float)
+    assert item.text() == ('X%0.7f' % item.value)
+    
+    # test setting items that do not exist yet
+    w.setFormat('X%0.7f', column=3)
+    
+    # test append uses correct formatting
+    w.appendRow(('x', 10, 7.3))
+    item = w.item(w.rowCount()-1, 2)
+    assert isinstance(item.value, float)
+    assert item.text() == ('X%0.7f' % item.value)
+    
+    # test reset back to defaults
+    w.setFormat(None, column=2)
+    assert isinstance(item.value, float)
+    assert item.text() == ('%0.6f' % item.value)
+    
+    w.setFormat(None)
+    assert isinstance(item.value, float)
+    assert item.text() == ('%0.3g' % item.value)
+    
+    # test function formatter
+    def fmt(item):
+        if isinstance(item.value, float):
+            return "%d %f" % (item.index, item.value)
+        else:
+            return pg.asUnicode(item.value)
+    w.setFormat(fmt)
+    assert isinstance(item.value, float)
+    assert isinstance(item.index, int)
+    assert item.text() == ("%d %f" % (item.index, item.value))
+    
 
 
 if __name__ == '__main__':
