@@ -46,6 +46,7 @@ pyqtgraph-0.9.9  [unreleased]
         - Stdout filter that colors text by thread
         - PeriodicTrace used to report deadlocks
     - Added AxisItem.setStyle()
+    - Added configurable formatting for TableWidget
 
   Bugfixes:
     - PlotCurveItem now has correct clicking behavior--clicks within a few px
